@@ -16,6 +16,9 @@
 	* logo-competition/logos_new.php:
 	disabled the Felix logos for now; other small changes
 
+	* logo-competition/logos_new.php:
+	restored Coji Morishita entry
+
 2003-06-02  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>
 
 	* birthday/index.php:
